--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "project2-kbat",
+  "name": "moviesreview",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -40,7 +40,7 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:8084",
+  "proxy": "http://localhost:8080",
   "devDependencies": {
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
